--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </ul>
     <ul id="ingredients"></ul>
     <ul id="gallery"></ul>
-    <script type="module" src="js.js"></script>
+    <script type="module" src="hw.js"></script>
     <div id="counter">
  <button type="button" data-action="decrement" class="decrement">-1</button>
  <span id="value">0</span>
